# onecli

./: Cargo.toml  README.md
genpwd/: Cargo.toml
genpwd/src/: lib.rs
src/: main.rs
src/cmd/: genpwd.rs  mod.rs
src/opts/: mod.rs
