[package]
name = "onecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["genpwd"]

[dependencies]
eyre = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
genpwd = { path = "./genpwd" }

[workspace.dependencies.clap]
version = "4.4.4"
features = ["derive"]

[workspace.dependencies.anyhow]
version = "1.0.75"

[workspace.dependencies.eyre]
version = "0.6.8"

[workspace.dependencies.tokio]
version = "1.32.0"
features = ["full"]

[workspace.dependencies.rand]
version = "0.8.5"
